add build jas task + compatible java 8